
(executable
 (name countLineDomainMgrEio)
 (enabled_if (= %{system} "linux"))
 (modules countLineDomainMgrEio)
 (libraries logs.fmt fmt.tty eio_linux eio_main)
 (modes byte exe))

 
(executable
 (name countLinesEio)
 (enabled_if (= %{system} "linux"))
 (modules countLinesEio)
 (libraries logs.fmt fmt.tty eio_linux))


 
(executable
 (name grepEio)
 (enabled_if (= %{system} "linux"))
 (modules grepEio)
 (libraries logs.fmt fmt.tty eio_linux))

