(executable
  (name bytesCstructBigarray)
  (libraries unix str cstruct)
  (modules bytesCstructBigarray)
  (modes byte exe))

 
 (executable
  (name countLines)
  (libraries unix str)
  (modules countLines)
  (modes byte exe))


 (executable
  (name countChars)
  (libraries unix str)
  (modules countChars)
  (modes byte exe))
